# GDAL4Android

./: .gitignore  .gitmodules  LICENCE.md  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/eu/paamand/gdal/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
app/src/test/java/eu/paamand/gdal/: ExampleUnitTest.java
gdal/: .gitignore  CMakeLists.txt  build.gradle
gdal/src/main/: AndroidManifest.xml
gdaltest/: build.gradle
gdaltest/src/androidTest/java/eu/paamand/gdaltest/: ExampleInstrumentedTest.java
gdaltest/src/main/: AndroidManifest.xml
gdaltest/src/main/java/eu/paamand/gdaltest/: MainActivity.java
gdaltest/src/main/res/layout/: activity_main.xml
gdaltest/src/main/res/values/: strings.xml
gdaltest/src/test/java/eu/paamand/gdaltest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
submodules/: install.sh
